--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
           document.head.appendChild(t);
         });
       </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1298362010587940"
+crossorigin="anonymous"></script>
+      
     </div>
 
     <!--
